--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-header [title]="'Copilot vs Gemini'"></app-header>
+<app-header></app-header>
+<main class="container mx-auto py-12 max-w-7xl sm:px-6 lg:px-8">
+  <router-outlet></router-outlet>
+</main>
