--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,60 @@
 <header class="bg-white dark:bg-gray-800 shadow-md py-4 px-6">
   <div class="container mx-auto flex items-center justify-between">
-    <h1 class="text-2xl font-bold text-gray-800 dark:text-white"> {{ title() }} </h1>
+    <h1 class="text-2xl font-bold text-gray-800 dark:text-white"> {{ navigationService.title() }} </h1>
+
     <button id="theme-toggle" (click)="toggleTheme()" class="focus:outline-none">
+      @if (isDarkMode) {
       <svg class="w-6 h-6 text-gray-800 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24"
         xmlns="http://www.w3.org/2000/svg">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
           d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
       </svg>
+      }
+      @else {
+      <svg class="w-6 h-6 text-gray-800" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="12" cy="12" r="6" stroke="#1C274C" stroke-width="1.5" />
+        <path d="M12 2V3" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+        <path d="M12 21V22" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+        <path d="M22 12L21 12" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+        <path d="M3 12L2 12" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+        <path d="M19.0708 4.92969L18.678 5.32252" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+        <path d="M5.32178 18.6777L4.92894 19.0706" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+        <path d="M19.0708 19.0703L18.678 18.6775" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+        <path d="M5.32178 5.32227L4.92894 4.92943" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+      </svg>
+      }
     </button>
   </div>
 </header>
+<div class="bg-amber-500 dark:bg-amber-400 py-3 px-6">
+  <div class="container mx-auto flex items-center justify-between truncate">
+    <nav class="flex" aria-label="Breadcrumb">
+      <ol role="list" class="flex items-center space-x-1">
+        <li>
+          <div>
+            <a routerLink="/" class="text-gray-800 hover:text-gray-700 ">
+              <svg class="h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M9.293 2.293a1 1 0 011.414 0l7 7A1 1 0 0117 11h-1v6a1 1 0 01-1 1h-2a1 1 0 01-1-1v-3a1 1 0 00-1-1H9a1 1 0 00-1 1v3a1 1 0 01-1 1H5a1 1 0 01-1-1v-6H3a1 1 0 01-.707-1.707l7-7z"
+                  clip-rule="evenodd" />
+              </svg>
+              <span class="sr-only">Home</span>
+            </a>
+          </div>
+        </li>
+        @for (item of navigationService.navItems(); track item.title) {
+        <li>
+          <div class="flex items-center">
+            <svg class="h-5 w-5 flex-shrink-0 text-gray-700 dark:text-gray-900" fill="currentColor" viewBox="0 0 20 20"
+              aria-hidden="true">
+              <path d="M5.555 17.776l8-16 .894.448-8 16-.894-.448z" />
+            </svg>
+            <a routerLink="{{ item.path }}" class="ml-1 text-sm font-medium text-gray-800 hover:text-gray-700">
+              {{ item.title }}</a>
+          </div>
+        </li>
+        }
+      </ol>
+    </nav>
+  </div>
+</div>
