--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,28 +2,59 @@
   <div class="container mx-auto flex items-center justify-between">
     <h1 class="text-2xl font-bold text-gray-800 dark:text-white"> {{ navigationService.title() }} </h1>
 
-    <button id="theme-toggle" (click)="toggleTheme()" class="focus:outline-none">
-      @if (isDarkMode) {
-      <svg class="w-6 h-6 text-gray-800 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
-      </svg>
+    <div class="flex gap-4">
+
+      <button id="theme-toggle" (click)="toggleTheme()" class="focus:outline-none">
+        @if (isDarkMode) {
+        <svg class="w-6 h-6 text-gray-800 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
+        </svg>
+        }
+        @else {
+        <svg class="w-6 h-6 text-gray-800" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="12" cy="12" r="6" stroke="#1C274C" stroke-width="1.5" />
+          <path d="M12 2V3" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+          <path d="M12 21V22" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+          <path d="M22 12L21 12" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+          <path d="M3 12L2 12" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+          <path d="M19.0708 4.92969L18.678 5.32252" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+          <path d="M5.32178 18.6777L4.92894 19.0706" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+          <path d="M19.0708 19.0703L18.678 18.6775" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+          <path d="M5.32178 5.32227L4.92894 4.92943" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
+        </svg>
+        }
+      </button>
+
+      @if (!firebaseService.user()) {
+      <span class="inline-block h-6 w-6 overflow-hidden rounded-full">
+        <svg class="w-6 h-6 text-gray-800 dark:text-gray-200" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M13 14C13 13.4477 12.5523 13 12 13C11.4477 13 11 13.4477 11 14V16C11 16.5523 11.4477 17 12 17C12.5523 17 13 16.5523 13 16V14Z"
+            fill="currentColor" />
+          <path
+            d="M7 8.12037C5.3161 8.53217 4 9.95979 4 11.7692V17.3077C4 19.973 6.31545 22 9 22H15C17.6846 22 20 19.973 20 17.3077V11.7692C20 9.95979 18.6839 8.53217 17 8.12037V7C17 4.23858 14.7614 2 12 2C9.23858 2 7 4.23858 7 7V8.12037ZM15 7V8H9V7C9 6.64936 9.06015 6.31278 9.17071 6C9.58254 4.83481 10.6938 4 12 4C13.3062 4 14.4175 4.83481 14.8293 6C14.9398 6.31278 15 6.64936 15 7ZM6 11.7692C6 10.866 6.81856 10 8 10H16C17.1814 10 18 10.866 18 11.7692V17.3077C18 18.7208 16.7337 20 15 20H9C7.26627 20 6 18.7208 6 17.3077V11.7692Z"
+            fill="currentColor" />
+        </svg>
+      </span>
+      } @else if(firebaseService.user()?.photoURL) {
+      <button (click)="firebaseService.signOut()" class="focus:outline-none flex">
+        <img class="inline-block h-6 w-6 rounded-full" src="{{ firebaseService.user()?.photoURL }}"
+          alt="Profile picture">
+      </button>
+      } @else {
+      <div (click)="firebaseService.signOut()" class="focus:outline-none flex">
+        <span class="inline-block h-6 w-6 overflow-hidden rounded-full bg-gray-100">
+          <svg class="h-full w-full text-gray-300" fill="currentColor" viewBox="0 0 24 24">
+            <path
+              d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z" />
+          </svg>
+        </span>
+      </div>
       }
-      @else {
-      <svg class="w-6 h-6 text-gray-800" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="12" cy="12" r="6" stroke="#1C274C" stroke-width="1.5" />
-        <path d="M12 2V3" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
-        <path d="M12 21V22" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
-        <path d="M22 12L21 12" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
-        <path d="M3 12L2 12" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
-        <path d="M19.0708 4.92969L18.678 5.32252" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
-        <path d="M5.32178 18.6777L4.92894 19.0706" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
-        <path d="M19.0708 19.0703L18.678 18.6775" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
-        <path d="M5.32178 5.32227L4.92894 4.92943" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
-      </svg>
-      }
-    </button>
+    </div>
   </div>
 </header>
 <div class="bg-amber-500 dark:bg-amber-400 py-3 px-6">
@@ -58,3 +89,27 @@
     </nav>
   </div>
 </div>
+
+
+@if (!firebaseService.user()) {
+<div class="border-l-4 border-yellow-400 bg-yellow-50 p-4">
+  <div class="flex">
+    <div class="flex-shrink-0">
+      <svg class="h-5 w-5 text-yellow-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd"
+          d="M8.485 2.495c.673-1.167 2.357-1.167 3.03 0l6.28 10.875c.673 1.167-.17 2.625-1.516 2.625H3.72c-1.347 0-2.189-1.458-1.515-2.625L8.485 2.495zM10 5a.75.75 0 01.75.75v3.5a.75.75 0 01-1.5 0v-3.5A.75.75 0 0110 5zm0 9a1 1 0 100-2 1 1 0 000 2z"
+          clip-rule="evenodd" />
+      </svg>
+    </div>
+    <div class="ml-3">
+      <p class="text-sm text-yellow-700">
+        In order to vote, login with
+        <button (click)="firebaseService.signInWithGoogle()"
+          class="font-medium text-yellow-700 underline hover:text-yellow-600">Google</button> or
+        <button (click)="firebaseService.signInWithGitHub()"
+          class="font-medium text-yellow-700 underline hover:text-yellow-600">GitHub</button>.
+      </p>
+    </div>
+  </div>
+</div>
+}
