--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -39,21 +39,26 @@
             fill="currentColor" />
         </svg>
       </span>
-      } @else if(firebaseService.user()?.photoURL) {
+      } @else {
       <button (click)="firebaseService.signOut()" class="focus:outline-none flex">
+        @if(firebaseService.user()?.photoURL) {
         <img class="inline-block h-6 w-6 rounded-full" src="{{ firebaseService.user()?.photoURL }}"
           alt="Profile picture">
-      </button>
-      } @else {
-      <div (click)="firebaseService.signOut()" class="focus:outline-none flex">
+        } @else {
         <span class="inline-block h-6 w-6 overflow-hidden rounded-full bg-gray-100">
           <svg class="h-full w-full text-gray-300" fill="currentColor" viewBox="0 0 24 24">
             <path
               d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z" />
           </svg>
         </span>
-      </div>
+        }
+      </button>
       }
+
+      @if (firebaseService.admin()) {
+      <img class="h-6 w-6" src="admin.svg" alt="Admin">
+      }
+
     </div>
   </div>
 </header>
