--- a/src/app/views/admin/election/election.component.html
+++ b/src/app/views/admin/election/election.component.html
@@ -1,19 +1,72 @@
-<app-dialog #dialog [title]="'Add new Question'">
+<app-dialog #dialog title="Add new Question">
   <app-title-descr [showId]="false" (save)="onSave($event)" />
 </app-dialog>
 
-<div class="flex items-center ml-4 gap-4">
-  <app-button text="Add Question" (click)="dialog.open.set(true)"></app-button>
+<app-dialog #debugDialog title="Debug values">
+  <pre>{{ adminBackendService.election() | json }}</pre>
+</app-dialog>
+
+<div class="flex items-center gap-4">
   <app-button text="View election" (click)="viewElection()"></app-button>
+  <app-button text="Add Question" (click)="dialog.open.set(true)"></app-button>
+  <app-button text="Unselect Question" (click)="onUnselect()"></app-button>
+  <app-button text="Debug" (click)="debugDialog.open.set(true)"></app-button>
+
 </div>
 
-<div class="flex flex-wrap">
+<app-card title="List of questions" class="p-4">
+  <ul role="list" class="divide-y  divide-gray-200">
+    @for (question of adminBackendService.questions() ; track $index) {
+    <li class="flex flex-wrap items-center justify-between gap-x-6 gap-y-4 py-5 sm:flex-nowrap">
+      <div>
+        <p class="text-sm font-semibold leading-6 text-gray-900 dark:text-white">
+          <a href="#" class="hover:underline">{{question.title}}</a>
+        </p>
+        <div class="mt-1 flex items-center gap-x-2 text-xs leading-5 text-gray-500 dark:text-gray-400">
+          <svg viewBox="0 0 2 2" class="h-0.5 w-0.5 fill-current">
+            <circle cx="1" cy="1" r="1" />
+          </svg>
+          <p>
+            {{ question.description }}
+          </p>
 
-  @for (question of adminBackendService.questions() ; track $index) {
-  <app-card [title]="question.title" class="w-full md:w-1/2 lg:w-1/3 xl:w-1/4 p-4">
-    <p class="text-gray-600 dark:text-gray-400 mb-4">{{ question.description }}</p>
-    <p class="text-gray-600 dark:text-gray-400 mb-4">{{ question.votes.length }}</p>
+        </div>
 
-  </app-card>
-  }
-</div>
+      </div>
+      <dl class="flex w-full flex-none justify-between gap-x-8 sm:w-auto">
+        @if (adminBackendService.election()?.activeQuestionId === question.id) {
+
+        <div class="mt-1 flex items-center gap-x-1.5">
+          <div class="flex-none rounded-full bg-emerald-500/20 p-1">
+            <div class="h-1.5 w-1.5 rounded-full bg-emerald-500"></div>
+          </div>
+          <p class="text-xs leading-5 text-gray-500">Active Question</p>
+        </div>
+        }
+
+        <div class="flex w-16 gap-x-2.5">
+          <dt>
+            <span class="sr-only">Total votes</span>
+            <svg class="h-6 w-6 text-gray-400 dark:text-gray-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M2.25 12.76c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.076-4.076a1.526 1.526 0 011.037-.443 48.282 48.282 0 005.68-.494c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />
+            </svg>
+          </dt>
+          <dd class="text-sm leading-6 text-gray-900 dark:text-white">{{ question.votes.length }}</dd>
+        </div>
+
+        <button (click)="onSelectQuestion(question.id)">
+          <div class="h-6 w-6 max-h-6 max-w-6 rounded-full ">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="fill-gray-600 dark:fill-gray-400">
+              <path
+                d="M21.9445 14.4719L21.9661 14.5336L21.9892 14.6345L21.9981 14.7331V21.25C21.9981 21.6297 21.7159 21.9435 21.3499 21.9932L21.2481 22H2.75C2.3703 22 2.05651 21.7178 2.00685 21.3518L2 21.25V14.7506L2.00184 14.6977L2.01271 14.6122C2.02285 14.5584 2.03841 14.5072 2.05894 14.4587L4.81824 8.44003C4.92517 8.2068 5.14245 8.04682 5.39153 8.01047L5.5 8.0026L8.03982 8.00183L7.25089 9.37206L7.18282 9.50183L5.981 9.502L3.918 13.9998H20.07L18.0428 9.65383L18.9052 8.15653C18.9718 8.20739 19.0301 8.26957 19.0771 8.3411L19.1297 8.43553L21.9445 14.4719ZM13.3652 2.05565L13.4566 2.10062L18.6447 5.10375C18.9729 5.29371 19.1033 5.69521 18.9636 6.03728L18.9187 6.1289L16.112 11.001L17.25 11.0016C17.6642 11.0016 18 11.3374 18 11.7516C18 12.1313 17.7178 12.4451 17.3518 12.4948L17.25 12.5016L15.248 12.501L15.2471 12.504H11.1691L11.166 12.501L6.75 12.5016C6.33579 12.5016 6 12.1658 6 11.7516C6 11.3719 6.28215 11.0581 6.64823 11.0085L6.75 11.0016L8.573 11.001L8.39145 10.8963C8.06327 10.7063 7.93285 10.3048 8.0726 9.96272L8.11747 9.8711L12.4341 2.37536C12.6235 2.04633 13.024 1.91557 13.3652 2.05565ZM13.3559 3.77529L9.78781 9.97119L11.566 11.001H14.383L17.248 6.02818L13.3559 3.77529Z" />
+            </svg>
+          </div>
+        </button>
+
+      </dl>
+    </li>
+    }
+  </ul>
+</app-card>
