--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<main class="container mx-auto py-12 max-w-7xl sm:px-6 lg:px-8">
+<main class="container mx-auto max-w-7xl sm:py-2 lg:py-12 sm:px-6 lg:px-8">
   <router-outlet></router-outlet>
 </main>
