Small fixes on voters and weights component

--- a/src/app/components/weights/weights.component.html
+++ b/src/app/components/weights/weights.component.html
@@ -20,8 +20,8 @@
 </div>
 
 <div class="mt-6 min-w-max ">
-  <div class="overflow-hidden rounded-full bg-stone-200 flex">
-    <div [style.width.%]="weight" class="h-2 rounded-l-lg bg-gradient-bar">
+  <div class="overflow-hidden rounded-full bg-gradient-to-r from-lime-300 to-amber-500 flex justify-end">
+    <div [style.width.%]="invertWeight" class="h-2 rounded-r-rg bg-stone-200">
     </div>
   </div>
   <div class="mt-2 sm:grid sm:grid-cols-3 text-sm font-medium text-gray-600 flex flex-col">
